Make chatbox fixed height, not sure if fixed width is necessary. Also fixed word wrap problem in the chat message display.

--- a/app/assets/stylesheets/message.scss
+++ b/app/assets/stylesheets/message.scss
@@ -14,24 +14,31 @@
 }
 .mess_display {
   display:flex;
-  flex-direction:column;
-  justify-content:space-around;
+  flex-direction: column;
+  justify-content: space-around;
+  word-wrap: break-word;
 }
+
 .mess_div {
   padding-top:20px;
   background-color:white;
   border: solid #C5C5C5;
   border-width: 1px 0px;
 }
+
 #recent_mess{
   position:relative;
-  padding-bottom:10px;
+  padding-bottom:20px;
+  padding-left: 10px;
 }
+
 .mess_descrip {
   width:100%;
-  border-radius:6px;
-  margin-left:-10px;
-  box-shadow:0px 0px 0.5px rgba(0,0,0,1);
+  resize: none;
+  height: 65px;
+  border-radius: 6px;
+  margin-left: -10px;
+  box-shadow: 0px 0px 0.5px rgba(0,0,0,1);
   border: none;
   @media screen and (max-width:468px) {
     margin-left:-3px;
@@ -42,6 +49,7 @@
     margin-left:-8px;
   }
 }
+
 .mess_sub {
   padding: 5px 5px;
   margin-left:-25px;
@@ -58,7 +66,8 @@
   border-width: 1px 1px;
 }
 .message_time_div{
-  font-size: 10px;
+  margin-top: 5px;
+  font-size: 11px;
   color: #BDBDBE;
 }
 .last_message_div{
